<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_gas_station.AddGasStationFragment">

    <EditText
        android:id="@+id/NAME"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/gas_station_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/COMPANY"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/empresa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NAME" />

    <EditText
        android:id="@+id/DEPARTMENT"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/departamento"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/COMPANY" />

    <EditText
        android:id="@+id/MUNICIPALITY"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/municipio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DEPARTMENT" />

    <EditText
        android:id="@+id/LATITUDE"
        android:layout_width="140sp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/latitud"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MUNICIPALITY" />

    <EditText
        android:id="@+id/LONGITUDE"
        android:layout_width="140sp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/longitud"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toEndOf="@+id/LATITUDE"
        app:layout_constraintTop_toBottomOf="@+id/MUNICIPALITY" />

    <Button
        android:id="@+id/btnAddStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/agregar_estacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LATITUDE" />

</androidx.constraintlayout.widget.ConstraintLayout>